<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/chat" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="LogOut" />
    </group>



</menu>
