<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="course.android.letgo_307945402_204317770.GUI.SellItemActivity">


    <ScrollView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/sell_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_menu_camera"
                android:clickable="true"
                android:contentDescription="@string/imp_click_to_add"
                android:maxHeight="250dp"
                android:maxWidth="250dp"
                android:minHeight="50dp"
                android:minWidth="50dp"
                android:onClick="onClickCam"
                android:scaleType="fitXY" />

            <EditText
                android:id="@+id/edit_sell_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/item_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_sell_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="Price"
                android:inputType="number" />

            <TextView
                android:id="@+id/tct_sell_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/spinner_sell_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/edit_sell_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/item_description"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/sale_saleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:elevation="0dp"
                android:onClick="publishSale"
                android:text="@string/putPnSale" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
